Update views and Add Templates

--- a/Himanshu/web/backend/templates/index.html
+++ b/Himanshu/web/backend/templates/index.html
@@ -1,9 +1,4 @@
-<!DOCTYPE> 
-<html>
-<head>
-
-</head>
-<body>
-<h1>This is a sample</h1>
-</body>
-</html>
+{% extends 'base.html' %}
+{% load static %}
+{% block body_block %}
+    {% endblock %}
