--- a/Himanshu/web/backend/templates/base.html
+++ b/Himanshu/web/backend/templates/base.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
-{% load static%}
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
+{% load static %}
 
 <html>
 <head>
@@ -8,10 +8,10 @@
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <link rel="stylesheet" href="{% static 'css/main.css' %}">
+	{% block styles%}
+	{% endblock %}
 </head>
 <body>
-<!-- Header -->
-
 <header id="header">
     <div class="inner">
         <a href="{% url 'home' %}" class="logo">
@@ -51,7 +51,7 @@
 
 				</div>
 			</section>
-        {% block body_block %}
+        {% block content %}
         {% endblock %}
 			<footer id="footer">
 				<div class="inner">
