--- a/Himanshu/web/backend/templates/predict.html
+++ b/Himanshu/web/backend/templates/predict.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 
-{% block body_content %}
+{% block content %}
 <section id="three" class="wrapper align-center">
 <div class="inner">
 <div class="flex flex-2">
@@ -14,7 +14,7 @@
     </header>
     <p>Get Songs Recommendation from Images</p>
     <footer>
-        <a href="{% url form %}" class="button">Predict</a>
+        <a href="{% url 'form' %}" class="button">Predict</a>
     </footer>
     </article>
 
