--- a/Himanshu/web/tun/templates/home.html
+++ b/Himanshu/web/tun/templates/home.html
@@ -3,5 +3,6 @@
 <div>
 <h3>Predict</h3>
 <button><a href="{% url 'form' %}">Click here for Static</button>
+<button><a href="">Click here for Live</button>
 </div>
 {% endblock %}
