--- a/Himanshu/web/tun/templates/live.html
+++ b/Himanshu/web/tun/templates/live.html
@@ -1,4 +1,6 @@
 {% extends 'base.html' %}
 {% block content %}
+
+<h3> This is the live feed </h3>
 <img src="{% url 'livefeed' %}">
 {% endblock %}
