update live feed(working)

--- a/Himanshu/web/tun/templates/live.html
+++ b/Himanshu/web/tun/templates/live.html
@@ -2,5 +2,5 @@
 {% block content %}
 
 <h3> This is the live feed </h3>
-<img src="{% url 'livefeed' %}">
+<img src="{% url 'live' %}">
 {% endblock %}
