--- a/Himanshu/web/tun/templates/live.html
+++ b/Himanshu/web/tun/templates/live.html
@@ -1,10 +1,42 @@
 {% extends 'base.html' %}
+
+{% load static %}
+
+{% block title %}
+    Live!
+{% endblock %}
+
+{% block style %}
+<style>
+    body{
+        overflow-x: hidden;
+        overflow-y: auto;
+    }
+ .single-card{
+        width: 16%;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+        margin-right: 3%;
+        border-radius: 10px;
+    }
+    .song-art img{
+        width: 100%;
+        height: auto;
+        border-radius: 10px 10px 0 0;
+    }
+</style>
+    <link rel="stylesheet" href="{% static 'styles/homestyle.css' %}">
+
+{% endblock %}
+
 {% block content %}
 
 {% if not submitbutton %}
-<h3> This is the live feed </h3>
+<div class="single-card">
+<h3> Video Output:  </h3>
+<div class="song-art">
 <img src="{% url 'livefeed' %}">
-
+</div>
+</div>
 <a href="{% url 'liveres' %}"><button>Suggest some songs</button></a>
 {% endif %}
 {% endblock %}
